--- a/templates/chat/broken-roll-card.html
+++ b/templates/chat/broken-roll-card.html
@@ -1,5 +1,5 @@
 <form class="roll-card">
-  <div class="card-title">{{localize 'MB.Broken'}}</div>
+  <div class="card-title">{{localize 'PB.Broken'}}</div>
   <div class="test-roll">
     <div class="roll-title">
       <span>{{brokenRoll.formula}}</span>
