--- a/templates/chat/morale-roll-card.html
+++ b/templates/chat/morale-roll-card.html
@@ -1,8 +1,8 @@
 <form class="roll-card morale-roll-card">
-  <div class="card-title">{{localize 'MB.Morale'}}</div>
+  <div class="card-title">{{localize 'PB.Morale'}}</div>
   <div class="morale-roll">
     <div class="roll-title">
-      <span>{{localize 'MB.Morale'}}: {{moraleRoll.formula}}</span>
+      <span>{{localize 'PB.Morale'}}: {{moraleRoll.formula}}</span>
     </div>
     <div class="roll-result">
       <span>{{xtotal moraleRoll}}</span>
@@ -10,7 +10,7 @@
     {{#if outcomeRoll}}
     <div class="outcome-roll">
       <div class="roll-title">
-        <span>{{localize 'MB.Outcome'}}: {{outcomeRoll.formula}}</span>
+        <span>{{localize 'PB.Outcome'}}: {{outcomeRoll.formula}}</span>
       </div>
       <div class="roll-result">
         <span>{{xtotal outcomeRoll}}</span>
