--- a/templates/chat/reaction-roll-card.html
+++ b/templates/chat/reaction-roll-card.html
@@ -1,14 +1,14 @@
 <form class="roll-card reaction-roll-card">
-  <div class="card-title">{{localize 'MB.Reaction'}}</div>
+  <div class="card-title">{{localize 'PB.Reaction'}}</div>
   <div class="reaction-roll">
     <div class="roll-title">
-      <span>{{localize 'MB.Reaction'}}: {{reactionRoll.formula}}</span>
+      <span>{{localize 'PB.Reaction'}}: {{reactionRoll.formula}}</span>
     </div>
     <div class="roll-result">
       <span>{{xtotal reactionRoll}}</span>
     </div>
     <div class="reaction-text">
-      {{actor.name}} {{localize 'MB.Is'}} {{reactionText}}
+      {{actor.name}} {{localize 'PB.Is'}} {{reactionText}}
     </div>
   </div>
 </form>
