--- a/templates/chat/test-ability-roll-card.html
+++ b/templates/chat/test-ability-roll-card.html
@@ -1,5 +1,5 @@
 <form class="roll-card attack-roll-card">
-  <div class="card-title">{{localize 'MB.Test'}} {{localize abilityKey}}</div>
+  <div class="card-title">{{localize 'PB.Test'}} {{localize abilityKey}}</div>
   <div class="dr-modifiers">
     {{#each drModifiers}}
     <div class="dr-modifier">{{this}}</div>
