--- a/templates/chat/wield-power-roll-card.html
+++ b/templates/chat/wield-power-roll-card.html
@@ -1,10 +1,10 @@
 <form class="roll-card wield-power-roll-card">
-  <div class="card-title">{{localize 'MB.WieldAPower'}}</div>
+  <div class="card-title">{{localize 'PB.WieldAPower'}}</div>
   <div class="wield-roll">
     <div class="roll-title">
       <span
-        >{{localize 'MB.Wield'}}: {{wieldFormula}} {{localize 'MB.Vs'}}
-        {{localize 'MB.DR'}} {{wieldDR}}</span
+        >{{localize 'PB.Wield'}}: {{wieldFormula}} {{localize 'PB.Vs'}}
+        {{localize 'PB.DR'}} {{wieldDR}}</span
       >
     </div>
     <div class="roll-result">
@@ -17,7 +17,7 @@
   {{#if damageRoll}}
   <div class="damage-roll">
     <div class="roll-title">
-      <span>{{localize 'MB.Damage'}}: {{damageRoll.formula}}</span>
+      <span>{{localize 'PB.Damage'}}: {{damageRoll.formula}}</span>
     </div>
     <div class="roll-result">
       <span>{{xtotal damageRoll}}</span>
