--- a/templates/item/feat-sheet.html
+++ b/templates/item/feat-sheet.html
@@ -13,7 +13,7 @@
           name="name"
           type="text"
           value="{{item.name}}"
-          placeholder="{{ localize 'MB.ItemName' }}"
+          placeholder="{{ localize 'PB.ItemName' }}"
         />
       </h1>
       <div class="item-subtitle">
@@ -25,9 +25,9 @@
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description"
-      >{{ localize "MB.TabDescription" }}</a
+      >{{ localize "PB.TabDescription" }}</a
     >
-    <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>
+    <a class="item" data-tab="details">{{ localize "PB.TabDetails" }}</a>
   </nav>
 
   {{!-- Sheet Body --}}
@@ -42,7 +42,7 @@
     <div class="tab" data-group="primary" data-tab="details">
       {{!-- Roll Label --}}
       <div class="form-group">
-        <label>{{ localize "MB.RollLabel" }}:</label>
+        <label>{{ localize "PB.RollLabel" }}:</label>
         <input
           type="text"
           name="data.rollLabel"
@@ -54,7 +54,7 @@
 
       {{!-- Roll Formula --}}
       <div class="form-group">
-        <label>{{ localize "MB.RollFormula" }}:</label>
+        <label>{{ localize "PB.RollFormula" }}:</label>
         <input
           type="text"
           name="data.rollFormula"
@@ -66,7 +66,7 @@
 
       {{!-- Roll Macro --}}
       <div class="form-group">
-        <label>{{ localize "MB.RollMacro" }}:</label>
+        <label>{{ localize "PB.RollMacro" }}:</label>
         <input
           type="text"
           name="data.rollMacro"
