--- a/templates/actor/container-sheet.html
+++ b/templates/actor/container-sheet.html
@@ -17,7 +17,7 @@
           name="name"
           type="text"
           value="{{actor.name}}"
-          placeholder="{{ localize 'MB.Name' }}"
+          placeholder="{{ localize 'PB.Name' }}"
         />
       </div>
       <div class="actor-subtitle">
@@ -25,7 +25,7 @@
       </div>
       <div class="holding-row">
         <span class="stat-label container-label"
-          >{{ localize "MB.ContainerHolding" }}:</span
+          >{{ localize "PB.ContainerHolding" }}:</span
         >
         <span class="stat-value">{{data.data.containerSpace}}</span>
         /
@@ -37,10 +37,10 @@
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description"
-      >{{ localize "MB.TabDescription" }}</a
+      >{{ localize "PB.TabDescription" }}</a
     >
-    <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>
-    <a class="item" data-tab="contents">{{ localize "MB.TabContents" }}</a>
+    <a class="item" data-tab="details">{{ localize "PB.TabDetails" }}</a>
+    <a class="item" data-tab="contents">{{ localize "PB.TabContents" }}</a>
   </nav>
 
   {{!-- Sheet Body --}}
@@ -54,7 +54,7 @@
     {{!-- Details Tab --}}
     <div class="tab" data-group="primary" data-tab="details">
       <div class="form-group">
-        <label>{{ localize "MB.ItemPrice" }}:</label>
+        <label>{{ localize "PB.ItemPrice" }}:</label>
         <input
           type="text"
           name="data.price"
@@ -64,7 +64,7 @@
         />
       </div>
       <div class="form-group">
-        <label>{{ localize "MB.ItemCapacity" }}:</label>
+        <label>{{ localize "PB.ItemCapacity" }}:</label>
         <input
           name="data.capacity.max"
           type="text"
@@ -79,7 +79,7 @@
     <div class="tab equipment-tab" data-group="primary" data-tab="contents">
       <ol class="items-list equipment-list">
         {{>
-        "systems/morkborg/templates/actor/common/actor-equipment-list.html"}}
+        "systems/pirateborg/templates/actor/common/actor-equipment-list.html"}}
       </ol>
     </div>
   </section>
