--- a/templates/actor/follower-sheet.html
+++ b/templates/actor/follower-sheet.html
@@ -17,11 +17,11 @@
           name="name"
           type="text"
           value="{{actor.name}}"
-          placeholder="{{ localize 'MB.Name' }}"
+          placeholder="{{ localize 'PB.Name' }}"
         />
       </div>
       <div class="hitpoints-row">
-        <span class="stat-label">{{ localize "MB.HitPoints" }}:</span>
+        <span class="stat-label">{{ localize "PB.HitPoints" }}:</span>
         <input
           class="stat-input"
           name="data.hp.value"
@@ -40,7 +40,7 @@
       </div>
       <div class="buttons-row">
         <button type="button" class="roll-button morale rollable">
-          {{localize "MB.Morale"}}
+          {{localize "PB.Morale"}}
         </button>
       </div>
     </div>
@@ -49,11 +49,11 @@
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description"
-      >{{ localize "MB.TabDescription" }}</a
+      >{{ localize "PB.TabDescription" }}</a
     >
-    <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>
-    <a class="item" data-tab="violence">{{ localize "MB.TabViolence" }}</a>
-    <a class="item" data-tab="treasures">{{ localize "MB.TabTreasures" }}</a>
+    <a class="item" data-tab="details">{{ localize "PB.TabDetails" }}</a>
+    <a class="item" data-tab="violence">{{ localize "PB.TabViolence" }}</a>
+    <a class="item" data-tab="treasures">{{ localize "PB.TabTreasures" }}</a>
   </nav>
 
   {{!-- Sheet Body --}}
@@ -68,7 +68,7 @@
     <div class="tab" data-group="primary" data-tab="details">
       {{!-- Morale --}}
       <div class="form-group">
-        <label>{{ localize "MB.Morale" }}:</label>
+        <label>{{ localize "PB.Morale" }}:</label>
         <input
           name="data.morale"
           type="text"
@@ -80,7 +80,7 @@
 
       {{!-- Trait --}}
       <div class="form-group">
-        <label>{{ localize "MB.FollowerTrait" }}:</label>
+        <label>{{ localize "PB.FollowerTrait" }}:</label>
         <input
           type="text"
           name="data.trait"
@@ -92,7 +92,7 @@
 
       {{!-- Speciality --}}
       <div class="form-group">
-        <label>{{ localize "MB.FollowerSpeciality" }}:</label>
+        <label>{{ localize "PB.FollowerSpeciality" }}:</label>
         <input
           type="text"
           name="data.speciality"
@@ -104,7 +104,7 @@
 
       {{!-- Value --}}
       <div class="form-group">
-        <label>{{ localize "MB.FollowerValue" }}:</label>
+        <label>{{ localize "PB.FollowerValue" }}:</label>
         <input
           type="text"
           name="data.value"
@@ -119,27 +119,27 @@
     <div class="tab violence-tab" data-group="primary" data-tab="violence">
       <div class="initiative">
         <span class="roll-initiative"
-          >{{localize "MB.Roll"}} {{localize "MB.Initiative"}}:</span
+          >{{localize "PB.Roll"}} {{localize "PB.Initiative"}}:</span
         >
         <button
           type="button"
           class="button item-button rollable initiative-button party-initiative-button"
-          title="{{localize 'MB.Party'}}"
+          title="{{localize 'PB.Party'}}"
         >
-          {{localize "MB.Party"}}
+          {{localize "PB.Party"}}
         </button>
         <button
           type="button"
           class="button item-button rollable initiative-button individual-initiative-button"
-          title="{{localize 'MB.IndividualI'}}"
+          title="{{localize 'PB.IndividualI'}}"
         >
-          {{localize "MB.Individual"}}
+          {{localize "PB.Individual"}}
         </button>
       </div>
       <ol class="items-list inventory-list">
         <li class="items-header flexrow">
           <h3 class="item-name flexrow">
-            {{localize "MB.ItemTypeWeaponPlural"}}
+            {{localize "PB.ItemTypeWeaponPlural"}}
           </h3>
         </li>
         <ol class="item-list weapon-list">
@@ -160,15 +160,15 @@
               <button
                 type="button"
                 class="item-button rollable attack-button"
-                title="{{localize 'MB.Attack'}}"
+                title="{{localize 'PB.Attack'}}"
               >
-                {{localize 'MB.Attack'}}
+                {{localize 'PB.Attack'}}
               </button>
             </div>
             <div class="item-controls">
               <a
                 class="item-control item-toggle item-toggle-equipped {{ifPrint item.data.equipped 'equipped'}}"
-                title="{{ifPrintElse item.data.equipped (localize 'MB.ItemEquipped') (localize 'MB.ItemUnequipped')}}"
+                title="{{ifPrintElse item.data.equipped (localize 'PB.ItemEquipped') (localize 'PB.ItemUnequipped')}}"
                 ><i class="fas fa-shield-alt"></i
               ></a>
               <a class="item-control item-edit" title="Edit Item"
@@ -182,12 +182,12 @@
           {{/each}}
         </ol>
         <div class="rule-text attack-rule">
-          {{localize 'MB.AttackCritText'}} {{localize 'MB.AttackFumbleText'}}
+          {{localize 'PB.AttackCritText'}} {{localize 'PB.AttackFumbleText'}}
         </div>
         <div class="violence-gutter"></div>
         <li class="items-header flexrow">
           <h3 class="item-name flexrow">
-            {{localize "MB.ItemTypeArmorPlural"}}
+            {{localize "PB.ItemTypeArmorPlural"}}
           </h3>
           <div class="item-controls flexrow"></div>
         </li>
@@ -208,7 +208,7 @@
               <div class="armor-tiers">
                 <div class="tiers">
                   <label class="stat-label tier-label"
-                    >{{ localize "MB.Tier" }}:</label
+                    >{{ localize "PB.Tier" }}:</label
                   >
                   <ul class="tiers">
                     <li>
@@ -260,7 +260,7 @@
             <div class="item-controls">
               <a
                 class="item-control item-toggle item-toggle-equipped {{ifPrint data.data.equippedArmor.data.equipped 'equipped'}}"
-                title="{{ifPrintElse data.data.equippedArmor.data.equipped (localize 'MB.ItemEquipped') (localize 'MB.ItemUnequipped')}}"
+                title="{{ifPrintElse data.data.equippedArmor.data.equipped (localize 'PB.ItemEquipped') (localize 'PB.ItemUnequipped')}}"
                 ><i class="fas fa-shield-alt"></i
               ></a>
               <a class="item-control item-edit" title="Edit Item"
@@ -285,13 +285,13 @@
             <h4 class="item-name">{{data.data.equippedShield.name}}</h4>
             <div class="item-buttons">
               <span class="rule-text shield-rule"
-                >{{localize 'MB.ShieldUseText'}}</span
+                >{{localize 'PB.ShieldUseText'}}</span
               >
             </div>
             <div class="item-controls">
               <a
                 class="item-control item-toggle item-toggle-equipped {{ifPrint data.data.equippedShield.data.equipped 'equipped'}}"
-                title="{{ifPrintElse data.data.equippedShield.data.equipped (localize 'MB.ItemEquipped') (localize 'MB.ItemUnequipped')}}"
+                title="{{ifPrintElse data.data.equippedShield.data.equipped (localize 'PB.ItemEquipped') (localize 'PB.ItemUnequipped')}}"
                 ><i class="fas fa-shield-alt"></i
               ></a>
               <a class="item-control item-edit" title="Edit Item"
@@ -310,14 +310,14 @@
               <button
                 type="button"
                 class="item-button rollable defend-button"
-                title="{{localize 'MB.Defend'}}"
+                title="{{localize 'PB.Defend'}}"
               >
-                {{localize "MB.Defend"}}
+                {{localize "PB.Defend"}}
               </button>
             </div>
             <div class="rule-text defend-rule">
-              {{localize 'MB.DefendCritText'}} {{localize
-              'MB.DefendFumbleText'}}
+              {{localize 'PB.DefendCritText'}} {{localize
+              'PB.DefendFumbleText'}}
             </div>
           </div>
         </div>
@@ -329,7 +329,7 @@
       <div class="equipment-top-row">
         <div class="silver">
           <span class="stat-label silver-label"
-            >{{ localize "MB.Silver" }}:</span
+            >{{ localize "PB.Silver" }}:</span
           >
           <input
             class="stat-input silver-input"
@@ -342,7 +342,7 @@
       </div>
       <ol class="items-list equipment-list">
         {{>
-        "systems/morkborg/templates/actor/common/actor-equipment-list.html"}}
+        "systems/pirateborg/templates/actor/common/actor-equipment-list.html"}}
       </ol>
     </div>
   </section>
