--- a/templates/dialog/add-item-dialog.html
+++ b/templates/dialog/add-item-dialog.html
@@ -1,24 +1,24 @@
 <form class="custom-dialog">
   <div class="form-group">
-    <label>{{localize 'MB.Name'}}:</label>
+    <label>{{localize 'PB.Name'}}:</label>
     <input
       type="text"
       name="itemname"
       value=""
-      placeholder="{{localize 'MB.Name'}}"
+      placeholder="{{localize 'PB.Name'}}"
       data-dtype="String"
     />
   </div>
   <div class="form-group">
-    <label>{{localize 'MB.Type'}}:</label>
+    <label>{{localize 'PB.Type'}}:</label>
     <br />
     <select name="itemtype" class="add-type">
-      <option value="armor">{{localize 'MB.ItemTypeArmor'}}</option>
-      <option value="container">{{localize 'MB.ItemTypeContainer'}}</option>
-      <option value="misc" selected>{{localize 'MB.ItemTypeMisc'}}</option>
-      <option value="scroll">{{localize 'MB.ItemTypeScroll'}}</option>
-      <option value="shield">{{localize 'MB.ItemTypeShield'}}</option>
-      <option value="weapon">{{localize 'MB.ItemTypeWeapon'}}</option>
+      <option value="armor">{{localize 'PB.ItemTypeArmor'}}</option>
+      <option value="container">{{localize 'PB.ItemTypeContainer'}}</option>
+      <option value="misc" selected>{{localize 'PB.ItemTypeMisc'}}</option>
+      <option value="scroll">{{localize 'PB.ItemTypeScroll'}}</option>
+      <option value="shield">{{localize 'PB.ItemTypeShield'}}</option>
+      <option value="weapon">{{localize 'PB.ItemTypeWeapon'}}</option>
     </select>
   </div>
 </form>
