--- a/templates/dialog/attack-dialog.html
+++ b/templates/dialog/attack-dialog.html
@@ -1,7 +1,7 @@
 <form class="custom-dialog">
   <input type="hidden" name="itemid" value="{{itemId}}" />
   <div class="form-group">
-    <label>{{localize 'MB.Attack'}} {{localize 'MB.DR'}}:</label>
+    <label>{{localize 'PB.Attack'}} {{localize 'PB.DR'}}:</label>
     <input
       type="text"
       name="attackdr"
@@ -11,7 +11,7 @@
     />
   </div>
   <div class="form-group">
-    <label>{{localize 'MB.TargetArmor'}}:</label>
+    <label>{{localize 'PB.TargetArmor'}}:</label>
     <input
       type="text"
       name="targetarmor"
