--- a/templates/dialog/defend-dialog.html
+++ b/templates/dialog/defend-dialog.html
@@ -1,6 +1,6 @@
 <form class="custom-dialog">
   <div class="form-group">
-    <label>{{localize 'MB.Defend'}} {{localize 'MB.DR'}}:</label>
+    <label>{{localize 'PB.Defend'}} {{localize 'PB.DR'}}:</label>
     <input
       type="text"
       name="defensebasedr"
@@ -10,7 +10,7 @@
     />
   </div>
   <div class="form-group">
-    <label>{{localize 'MB.Modified'}} {{localize 'MB.DR'}}:</label>
+    <label>{{localize 'PB.Modified'}} {{localize 'PB.DR'}}:</label>
     <input
       type="text"
       class="readonly"
@@ -26,7 +26,7 @@
   </div>
   {{/if}}
   <div class="form-group">
-    <label>{{localize 'MB.IncomingAttack'}}:</label>
+    <label>{{localize 'PB.IncomingAttack'}}:</label>
     <input
       type="text"
       name="incomingattack"
