--- a/templates/dialog/rest-dialog.html
+++ b/templates/dialog/rest-dialog.html
@@ -1,18 +1,18 @@
 <form id="rest-form" class="custom-dialog rest-dialog">
   <div class="section">
-    <div class="subtitle">{{localize 'MB.RestDialogLength'}}</div>
+    <div class="subtitle">{{localize 'PB.RestDialogLength'}}</div>
     <div>
       <ul>
         <li>
           <label
             ><input name="rest-length" type="radio" value="short" checked />
-            <div>{{localize 'MB.RestDialogLengthShort'}}</div></label
+            <div>{{localize 'PB.RestDialogLengthShort'}}</div></label
           >
         </li>
         <li>
           <label
             ><input name="rest-length" type="radio" value="long" />
-            <div>{{localize 'MB.RestDialogLengthLong'}}</div></label
+            <div>{{localize 'PB.RestDialogLengthLong'}}</div></label
           >
         </li>
       </ul>
@@ -20,25 +20,25 @@
   </div>
 
   <div class="section">
-    <div class="subtitle">{{localize 'MB.RestDialogFoodAndDrink'}}</div>
+    <div class="subtitle">{{localize 'PB.RestDialogFoodAndDrink'}}</div>
     <div>
       <ul>
         <li>
           <label
             ><input name="food-and-drink" type="radio" value="eat" checked />
-            <div>{{localize 'MB.RestDialogEat'}}</div></label
+            <div>{{localize 'PB.RestDialogEat'}}</div></label
           >
         </li>
         <li>
           <label
             ><input name="food-and-drink" type="radio" value="donteat" />
-            <div>{{localize 'MB.RestDialogDontEat'}}</div></label
+            <div>{{localize 'PB.RestDialogDontEat'}}</div></label
           >
         </li>
         <li>
           <label
             ><input name="food-and-drink" type="radio" value="starve" />
-            <div>{{localize 'MB.RestDialogStarve'}}</div></label
+            <div>{{localize 'PB.RestDialogStarve'}}</div></label
           >
         </li>
       </ul>
@@ -46,13 +46,13 @@
   </div>
 
   <div class="section">
-    <div class="subtitle">{{localize 'MB.Infection'}}</div>
+    <div class="subtitle">{{localize 'PB.Infection'}}</div>
     <div>
       <ul>
         <li>
           <label
             ><input name="infected" type="checkbox" />
-            <div>{{localize 'MB.RestDialogInfected'}}</div></label
+            <div>{{localize 'PB.RestDialogInfected'}}</div></label
           >
         </li>
       </ul>
@@ -61,7 +61,7 @@
 
   <div class="button-row">
     <button type="submit" class="button rest-button" name="rest" value="1">
-      {{localize 'MB.Rest'}}
+      {{localize 'PB.Rest'}}
     </button>
   </div>
 </form>
