--- a/templates/dialog/scvm-dialog.html
+++ b/templates/dialog/scvm-dialog.html
@@ -1,6 +1,6 @@
 <form id="scvm-form" class="custom-dialog scvm-dialog">
   <div class="section">
-    <div class="subtitle">{{localize "MB.ScvmfactoryChooseFromClasses"}}</div>
+    <div class="subtitle">{{localize "PB.ScvmfactoryChooseFromClasses"}}</div>
     <ul>
       {{#each this.classes}}
       <li>
@@ -13,23 +13,23 @@
       {{/each}}
     </ul>
     <div>
-      <a class="toggle-none">{{localize "MB.ScvmfactoryToggleNone"}}</a>&nbsp; /
-      &nbsp;<a class="toggle-all">{{localize "MB.ScvmfactoryToggleAll"}}</a>
+      <a class="toggle-none">{{localize "PB.ScvmfactoryToggleNone"}}</a>&nbsp; /
+      &nbsp;<a class="toggle-all">{{localize "PB.ScvmfactoryToggleAll"}}</a>
     </div>
   </div>
 
   {{#if forActor}}
   <div class="section">
-    <p>{{localize "MB.ScvmfactoryWarning"}}</p>
+    <p>{{localize "PB.ScvmfactoryWarning"}}</p>
   </div>
   {{/if}}
 
   <div class="button-row">
     <button type="submit" class="button cancel-button" name="cancel" value="1">
-      {{localize "MB.Cancel"}}
+      {{localize "PB.Cancel"}}
     </button>
     <button type="submit" class="button scvm-button" name="scvm" value="1">
-      {{localize "MB.ScvmfactoryMakeScvm"}}
+      {{localize "PB.ScvmfactoryMakeScvm"}}
     </button>
   </div>
 </form>
