--- a/templates/item/armor-sheet.html
+++ b/templates/item/armor-sheet.html
@@ -13,7 +13,7 @@
           name="name"
           type="text"
           value="{{item.name}}"
-          placeholder="{{ localize 'MB.ItemName' }}"
+          placeholder="{{ localize 'PB.ItemName' }}"
         />
       </h1>
       <div class="item-subtitle">
@@ -25,9 +25,9 @@
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description"
-      >{{ localize "MB.TabDescription" }}</a
+      >{{ localize "PB.TabDescription" }}</a
     >
-    <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>
+    <a class="item" data-tab="details">{{ localize "PB.TabDetails" }}</a>
   </nav>
 
   {{!-- Sheet Body --}}
@@ -42,7 +42,7 @@
     <div class="tab" data-group="primary" data-tab="details">
       {{!-- Price --}}
       <div class="form-group">
-        <label>{{ localize "MB.ItemPrice" }}:</label>
+        <label>{{ localize "PB.ItemPrice" }}:</label>
         <input
           type="text"
           name="data.price"
@@ -54,7 +54,7 @@
 
       {{!-- Carry weight --}}
       <div class="form-group">
-        <label>{{ localize "MB.CarryWeight" }}:</label>
+        <label>{{ localize "PB.CarryWeight" }}:</label>
         <input
           type="text"
           name="data.carryWeight"
@@ -66,7 +66,7 @@
 
       {{!-- Container space --}}
       <div class="form-group">
-        <label>{{ localize "MB.ContainerSpace" }}:</label>
+        <label>{{ localize "PB.ContainerSpace" }}:</label>
         <input
           type="text"
           name="data.containerSpace"
@@ -78,7 +78,7 @@
 
       {{!-- Armor Current Tier --}}
       <div class="form-group">
-        <label>{{ localize "MB.ArmorCurrentTier" }}:</label>
+        <label>{{ localize "PB.ArmorCurrentTier" }}:</label>
         <select name="data.tier.value" data-dtype="Number">
           {{#select data.data.tier.value}} {{#each config.armorTiers as |tierObj
           tierNum|}}
@@ -91,7 +91,7 @@
 
       {{!-- Armor Max Tier --}}
       <div class="form-group">
-        <label>{{ localize "MB.ArmorMaxTier" }}:</label>
+        <label>{{ localize "PB.ArmorMaxTier" }}:</label>
         <select name="data.tier.max" data-dtype="Number">
           {{#select data.data.tier.max}} {{#each config.armorTiers as |tierObj
           tierNum|}}
