--- a/templates/item/weapon-sheet.html
+++ b/templates/item/weapon-sheet.html
@@ -13,7 +13,7 @@
           name="name"
           type="text"
           value="{{item.name}}"
-          placeholder="{{ localize 'MB.ItemName' }}"
+          placeholder="{{ localize 'PB.ItemName' }}"
         />
       </h1>
       <div class="item-subtitle">
@@ -25,9 +25,9 @@
   {{!-- Sheet Tab Navigation --}}
   <nav class="sheet-tabs tabs" data-group="primary">
     <a class="item" data-tab="description"
-      >{{ localize "MB.TabDescription" }}</a
+      >{{ localize "PB.TabDescription" }}</a
     >
-    <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>
+    <a class="item" data-tab="details">{{ localize "PB.TabDetails" }}</a>
   </nav>
 
   {{!-- Sheet Body --}}
@@ -42,7 +42,7 @@
     <div class="tab" data-group="primary" data-tab="details">
       {{!-- Price --}}
       <div class="form-group">
-        <label>{{ localize "MB.ItemPrice" }}:</label>
+        <label>{{ localize "PB.ItemPrice" }}:</label>
         <input
           type="text"
           name="data.price"
@@ -54,7 +54,7 @@
 
       {{!-- Carry weight --}}
       <div class="form-group">
-        <label>{{ localize "MB.CarryWeight" }}:</label>
+        <label>{{ localize "PB.CarryWeight" }}:</label>
         <input
           type="text"
           name="data.carryWeight"
@@ -66,7 +66,7 @@
 
       {{!-- Container space --}}
       <div class="form-group">
-        <label>{{ localize "MB.ContainerSpace" }}:</label>
+        <label>{{ localize "PB.ContainerSpace" }}:</label>
         <input
           type="text"
           name="data.containerSpace"
@@ -78,7 +78,7 @@
 
       {{!-- Weapon Type --}}
       <div class="form-group">
-        <label>{{ localize "MB.ItemWeaponType" }}:</label>
+        <label>{{ localize "PB.ItemWeaponType" }}:</label>
         <select name="data.weaponType">
           {{#select data.data.weaponType}} {{#each config.weaponTypes as |name
           type|}}
@@ -89,7 +89,7 @@
 
       {{!-- Damage Die --}}
       <div class="form-group">
-        <label>{{ localize "MB.ItemDamageDie" }}:</label>
+        <label>{{ localize "PB.ItemDamageDie" }}:</label>
         <input
           type="text"
           name="data.damageDie"
@@ -101,7 +101,7 @@
 
       {{!-- Handed --}}
       <div class="form-group">
-        <label>{{ localize "MB.ItemHanded" }}:</label>
+        <label>{{ localize "PB.ItemHanded" }}:</label>
         <select name="data.handed">
           {{#select data.data.handed}} {{#each config.handed as |name value|}}
           <option value="{{value}}">{{localize name}}</option>
@@ -111,7 +111,7 @@
 
       {{!-- Uses ammo --}}
       <div class="form-group">
-        <label>{{ localize "MB.ItemUsesAmmo" }}:</label>
+        <label>{{ localize "PB.ItemUsesAmmo" }}:</label>
         <input
           type="checkbox"
           name="data.usesAmmo"
@@ -122,7 +122,7 @@
       </div>
 
       <div class="form-group">
-        <label>{{ localize "MB.ItemCritOn" }}:</label>
+        <label>{{ localize "PB.ItemCritOn" }}:</label>
         <input
           type="text"
           name="data.critOn"
@@ -133,7 +133,7 @@
       </div>
 
       <div class="form-group">
-        <label>{{ localize "MB.ItemFumbleOn" }}:</label>
+        <label>{{ localize "PB.ItemFumbleOn" }}:</label>
         <input
           type="text"
           name="data.fumbleOn"
